<resources>
    <string name="app_name">SEA_Ticketing</string>
    <string name="newLogo">Logo of K L E F</string>
    <string name="projectName">Complaint filing APP</string>
    <string name="loginDescription">User Id :</string>
    <string name="passwordDescription">Password :</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="contactDetails">Click To Connect</string>
    <string name="dashboardHistory">Previous Tickets</string>
    <string name="dashboardNewTicket">File A Ticket</string>
    <string name="dashboardProfile">Profile</string>
    <string name="dasboardForum">Forum</string>

</resources>
