<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    android:background="@drawable/backgroundapp"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/KLef"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:alpha="0.9"
            android:contentDescription="@string/newLogo"
            app:srcCompat="@drawable/ic_officiallogo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Signin_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Login"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/loginDescription"
            android:textColor=" #000000" />

        <EditText
            android:id="@+id/StudentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="0dp"
            android:autofillHints=""
            android:background="@drawable/gradienteditext"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_disp"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/passwordDescription"
            android:textColor=" #000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/gradienteditext"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/LOGIN_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/buttonstyle"
            android:backgroundTint="@color/newlogocolor"
            android:backgroundTintMode="src_in"
            android:foregroundGravity="center"
            android:saveEnabled="true"
            android:text="@string/loginButtonText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSelectHandle="@android:drawable/alert_dark_frame" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:text="@string/forgotPassword"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/AdminLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:gravity="right"
            android:text="@string/contactDetails"
            android:textColor="@color/darkBrown" />
    </LinearLayout>

</LinearLayout>